avoid play/pause button to be available on start (case no autoplay) + add to history only if source connected + avoid get samplings if pane not visible or no viz + enable noviz flag + move existing history item on top of list when re-added

--- a/js/modules/web-radio-picker/styles.css
+++ b/js/modules/web-radio-picker/styles.css
@@ -310,6 +310,11 @@ find license and copyright informations in files /COPYRIGHT and /LICENCE
     cursor: pointer;
 }
 
+.but-icon-disabled {
+    cursor:not-allowed;
+    opacity: 0.4;
+}
+
 #cnv_oscillo {
     width: 95%;
     /* width: 800px; */
